[package]
name = "tailog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
#crossterm = "0.26.1"
owo-colors = "3.5.0"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
log = "0.4.17"
tempfile = "3.3.0"
